# knowledge-mining-agent

./: .gitignore  AGENTS.md  AGENTS_PROJECT.md  JOURNAL.md  LICENSE  README.md  RESEARCH.md  SPEC.md  config.py  config.yaml  create_youtube_embeddings.py  database_report.md  db.py  db_query.py  eval_dataset.json  eval_output.txt  eval_results.txt  examples.py  extraction_results.jsonl  health_check.py  log.py  main.py  mkdocs.yml  pyproject.toml  run_evaluations.py  sample_schema_output.txt  stopwords_expanded.txt  test_db.py  text_processing_experiments.ipynb
agent/: agent.py  config.py  prompts.py  tools.py
agents/: baseline_rag_agent.py  data_preprocessing.py  evaluation.py
app/: CHAT_README.md  app.py
app/templates/: chat.html
docs/: api.md  index.md
prompts/: sys_prompt_summarizer.txt
site/: 404.html  index.html  search.html
site/api/: index.html
site/search/: search_index.json
specs/: Chunking and Retrieval.md
tests/: test_db.py
utils/: db_inspector.py  stopword_generator.py  test_citations.py  vector_store_inspector.py  vector_store_inspector_noemoji.py
