[tool.poetry]
name = "knowledge-mining-agent"
version = "0.1.0"
description = ""
authors = ["evanokeefe39 <evan.okeefe39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
