[tool.poetry]
name = "knowledge-mining-agent"
version = "0.1.0"
description = ""
authors = ["evanokeefe39 <evan.okeefe39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dotenv = "^0.9.9"
langextract = "^1.0.9"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"
langchain = "^0.3.27"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
pgvector = "^0.3.0"
 ragas = "^0.2.0"
 pyyaml = "^6.0"
 colorama = "^0.4.6"
 flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
